# medusa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: cli-reference.md  index.md
docs/architecture/: checks.md  overview.md  scoring.md
docs/deployment/: index.md
docs/deployment/linux/: confirming-deployment.md  manual-deployment.md
docs/deployment/macos/: confirming-deployment.md  enterprise-deployment.md  manual-deployment.md
docs/deployment/windows/: confirming-deployment.md  enterprise-deployment.md  manual-deployment.md
docs/development/: contributing.md  custom-checks.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: agent.md  ai-reasoning.md  baselines.md  ci-cd.md  gateway.md  output-formats.md  owasp-mcp.md  scanning.md
examples/: ci_pipeline.yaml
examples/custom_check_example/: my_check.metadata.yaml  my_check.py
packaging/macos/: build_pkg.sh  com.medusa.agent.plist
packaging/windows/: build_msi.ps1
scripts/: generate_check.py  reframe_check_metadata.py  reframe_review.csv
scripts/manifests/: agentic_behavior.yaml  audit_logging.yaml  authentication.yaml  context_security.yaml  credential_exposure.yaml  data_protection.yaml  error_handling.yaml  governance.yaml  input_validation.yaml  integrity.yaml  multi_tenant.yaml  privilege_scope.yaml  prompt_security.yaml  rate_limiting.yaml  resource_security.yaml  sampling_security.yaml  secrets_management.yaml  server_hardening.yaml  server_identity.yaml  session_management.yaml  ssrf_and_network.yaml  supply_chain.yaml  tool_poisoning.yaml  transport_security.yaml
scripts/templates/: check.py.j2  metadata.yaml.j2  test_stub.py.j2
src/medusa/: __init__.py  __main__.py
src/medusa/advisories/: MAD-2025-0001.yaml  MAD-2025-0002.yaml  MAD-2025-0003.yaml  MAD-2025-0004.yaml  MAD-2025-0005.yaml  MAD-2025-0006.yaml  MAD-2025-0007.yaml  MAD-2025-0008.yaml  MAD-2025-0009.yaml  MAD-2025-0010.yaml  __init__.py  loader.py  models.py
src/medusa/agent/: __init__.py  config_monitor.py  config_watcher.py  daemon.py  health.py  installer.py  models.py  policy_sync.py  store.py  telemetry.py
src/medusa/ai/: __init__.py  client.py  credits.py  prompts.py  response_parser.py  throttle.py
tests/: conftest.py
tests/integration/: conftest.py  mock_server.py  test_e2e_scan.py
tests/unit/: test_advisories.py  test_ai_client.py  test_ai_credits.py  test_ai_reasoning.py  test_ai_response_parser.py  test_ai_throttle.py  test_baseline.py  test_benchmarks.py  test_cli_config.py  test_compliance.py  test_config_discovery.py  test_config_parser.py  test_connectors.py  test_diff.py  test_heuristics.py  test_mcp_clients.py  test_models.py  test_quickscan.py  test_registry.py  test_reporters.py  test_scoring.py  test_transport_filtering.py  test_utils.py
website/: CNAME  index.html
(+1285 files in other folders)
